Remove vold and moddded asusdec.  Modded init.cardhu.cpu Not compatable with paranoidandroid.  Altered FPS locks.
Change-Id: I01c60a1a8b21d4fc402b9c0498ed8a3cfb905fbb

--- a/overlay/frameworks/base/core/res/res/values/strings.xml
+++ b/overlay/frameworks/base/core/res/res/values/strings.xml
@@ -20,8 +20,10 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
 <add-resource type="string" name="reboot_apx"></add-resource>
+<add-resource type="string" name="storage_sd_dock_card"></add-resource>
 
 <!-- Button to reboot the phone into APX mode, within the Reboot Options dialog -->
 <string name="reboot_apx">NVIDIA APX mode</string>
+<string name="storage_sd_dock_card">Dock SD Card</string>
 
 </resources>
