--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Use this branch to compile ParanoidAndroid's main jellybean branch.
+Use this branch to compile ParanoidAndroid's main jellybean branch.  Also useful for building ROM's like PAC-MAN and
+CarbonRom.
