--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-Use this branch to compile ParanoidAndroid's main jellybean branch.  Also useful for building ROM's like PAC-MAN and
-CarbonRom.
+Use this branch to compile ParanoidAndroid's main jellybean branch.  Also useful for building ROM's like PAC-MAN and CarbonRom.
